@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Aug-17-2005 patrickh    Removed the unused namespace snx::FileIO and all its
+                        members.
+                        NEW VERSION: 1.1.1
 Jul-11-2005 patrickh    Updated to VPR 1.1.3.
 Jul-10-2005 patrickh    Updated to VPR 1.1.2.
 Jun-09-2005 patrickh    Updated to support Windows 64-bit edition.
